# CommandTerminal

./: .gitignore  CMakeLists.txt  Makefile  checkEnv.c  checkEnv.h  check_env.c  check_env.h  grep_me.txt  main.c  main.h  new_processes.c  new_processes.h  routing.c  routing.h  signal_handler.c  signal_handler.h  structs.h  system_navigation.c  system_navigation.h
sleep/: Makefile  zzz.c
